Fixing banner text display on mobile screens
Adjusted font size for banner text for better display on small screens

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -1033,6 +1033,9 @@ div.toggle-buttons .toggle-label {font-size: 1em; font-weight:600}
     .hugoye-banner {
         height:100px !important;
         }
+	.banner-text {
+		font:1em;
+	}
     }
 
 /* Medium screens */
